# brick-libcpp

./: _CoqProject
rocq-brick-libcpp/proof/newarr/: test.v
rocq-brick-libcpp/proof/shared_ptr/: specs.v  test.cpp  test.v
rocq-brick-libstdcpp/: dune  dune-project  rocq-brick-libstdcpp.opam
rocq-brick-libstdcpp/proof/: dune  dune-gen.sh
rocq-brick-libstdcpp/proof/mutex/: demo.cpp  demo_cpp_proof.v  spec.v  test_cpp_proof.v
rocq-brick-libstdcpp/proof/new/: hints.v  pred.v  spec.v  spec_exc.v
rocq-brick-libstdcpp/proof/runtime/: pred.v
rocq-brick-libstdcpp/proof/semaphore/: spec.v  test_cpp_proof.v
rocq-brick-libstdcpp/proof/semaphore/proof/: release.v
rocq-brick-libstdcpp/test/: dune  dune-gen.sh
rocq-brick-libstdcpp/test/new/: demo_cpp_proof.v
