(lang dune 3.17)
(using coq 0.10)
(name rocq-brick-libstdcpp)

(generate_opam_files)

(maintainers
 "Paolo Giarrusso <paolo@skylabs-ai.com>"
 "Gregory Malecha <gregory@skylabs-ai.com>")

(authors
 "Gregory Malecha <gregory@skylabs-ai.com>"
 "Paolo Giarrusso <paolo@skylabs-ai.com>")

(license BSD-3)

(source (github SkyLabsAI/brick-libcpp))

(package
 (name rocq-brick-libstdcpp)
 (synopsis "SkyLabs AI BRiCk: C++ standard library (libstdc++)")
 (depends
  (rocq-skylabs-cpp2v (= dev))
  elpi-cpp
  rocq-skylabs-auto-core
  rocq-skylabs-auto-cpp))

(subst disabled)
