; Copyright © 2022-2025 BlueRock Security, Inc.
;
; This file is CONFIDENTIAL AND PROPRIETARY to BlueRock. All rights reserved.
;
; Use of this file is only permitted subject to a separate written license agreement with BlueRock.

(include_subdirs qualified)
(coq.theory
 (name skylabs.brick.libstdcpp) ; logical path of this library
 (package rocq-brick-libstdcpp)
 (theories
  ; skylabs deps
  Stdlib
  stdpp
  skylabs.upoly
  elpi elpi_elpi elpi.apps.locker elpi.apps.NES
  Lens Lens.Elpi
  Ltac2 skylabs.ltac2.extra
  skylabs.prelude
  iris
  skylabs.iris.extra
  Equations Equations.Prop Equations.Type
  skylabs.lang.cpp
  skylabs.ltac2.logger
  skylabs.auto.core
  ;
  ExtLib
  skylabs.elpi.extra
  skylabs.elpi.cpp
  ; skylabs deps end
  skylabs))
(include dune.inc)

(rule
 (action (with-stdout-to dune.inc.gen (run ./dune-gen.sh)))
 (deps (glob_files_rec *.{h,c,hpp,cpp,sh})))

(rule
 (alias dune_inc)
 (action (diff dune.inc dune.inc.gen)))
